<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RSS Photo Show</string>
    <string name="settings_title">Settings</string>
    <string name="repositoryflow_title">Featured image flows</string>
    <string name="imageflowurl_title">Current RSS image flow</string>
    <string name="showtitle_title">Title mode</string>
    <string name="showtitle_summary_on">Show titles</string>
    <string name="showtitle_summary_off">Don\'t show titles</string>
    <string name="alwaysrefresh_summary_on">Refresh image if same as current</string>
    <string name="alwaysrefresh_summary_off">Do not refresh image if same as current</string>
    <string name="alwaysrefresh_title">Refresh mode</string>
    <string name="imagedelay_title">Image refresh interval</string>
    <string name="rssdelay_title">Flow refresh interval</string>
    <string name="debug_title">Debug mode</string>
    <string name="debug_summary">Enable debug output below image</string>
    <string name="loading">Loading...</string>
    <string name="noimages">No images, select image flow"</string>
    <string name="notlicensed_title">Application Not Licensed</string>
    <string name="notlicensed_description">This application is not licensed. Please purchase it from Google Play
    </string>
    <string name="notlicensed_buy">Buy App</string>
    <string name="notlicensed_exit">Exit</string>
    <string name="eula">By downloading any application from Erland Isaksson or Google™ (here after referered to as “The
        Company”), installing or using this application or any portion thereof (“Application”), you agree to the
        following terms and conditions (the “Terms and Conditions”).
        \n\n1. USE OF APPLICATION
        \na. The Company grants you the non-exclusive, non-transferable, limited right and license to install and use
        this Application solely and exclusively for your personal use.
        \nb. You may not use the Application in any manner that could damage, disable, overburden, or impair the
        Application (or servers or networks connected to the Application), nor may you use the Application in any manner
        that could interfere with any other party’s use and enjoyment of the Application (or servers or networks
        connected to the Application).
        \nc. You agree that you are solely responsible for (and that The Company has no responsibility to you or to any
        third party for) your use of the Application, any breach of your obligations under the Terms and Conditions, and
        for the consequences (including any loss or damage which The Company may suffer) of any such breach.

        \n\n2. PROPRIETARY RIGHTS
        \nYou acknowledge that (a) the Application contains proprietary and confidential information that is protected
        by applicable intellectual property and other laws, and (b) The Company and/or third parties own all right,
        title and interest in and to the Application and content, excluding content provided by you, that may be
        presented or accessed through the Application, including without limitation all Intellectual Property Rights
        therein and thereto. “Intellectual Property Rights” means any and all rights existing from time to time under
        patent law, copyright law, trade secret law, trademark law, unfair competition law, and any and all other
        proprietary rights, and any and all applications, renewals, extensions and restorations thereof, now or
        hereafter in force and effect worldwide. You agree that you will not, and will not allow any third party to, (i)
        copy, sell, license, distribute, transfer, modify, adapt, translate, prepare derivative works from, decompile,
        reverse engineer, disassemble or otherwise attempt to derive source code from the Application or content that
        may be presented or accessed through the Application for any purpose, unless otherwise permitted, (ii) take any
        action to circumvent or defeat the security or content usage rules provided, deployed or enforced by any
        functionality (including without limitation digital rights management functionality) contained in the
        Application, (iii) use the Application to access, copy, transfer, transcode or retransmit content in violation
        of any law or third party rights, or (iv) remove, obscure, or alter The Company’s or any third partyâ€™s
        copyright notices, trademarks, or other proprietary rights notices affixed to or contained within or accessed in
        conjunction with or through the Application.

        \n\n3. THE COMPANY TERMS OF SERVICE AND PRIVACY POLICY
        \na. The Company’s Privacy Policy (located at http://www.google.com/privacypolicy.html) explains how The Company
        treats your information and protects your privacy when you use the Application. You agree to the use of your
        data in accordance with The Company’s privacy policies.
        \nb. The Application may contain features that are used in conjunction with The Company’s search and other
        services. Accordingly, your use of such features of the Application is also governed by The Company’s Terms of
        Service located at http://www.google.com/terms_of_service.html, The Company’s Privacy Policy located at
        http://www.google.com/privacypolicy.html, as well as any applicable The Company Service-specific Terms of
        Service and Privacy Policy, which may be updated from time to time and without notice.

        \n\n4. U.S. GOVERNMENT RESTRICTED RIGHTS
        \nThis Application, related materials and documentation have been developed entirely with private funds. If the
        user of the Application is an agency, department, employee, or other entity of the United States Government, the
        use, duplication, reproduction, release, modification, disclosure, or transfer of the Application, including
        technical data or manuals, is restricted by the terms, conditions and covenants contained in these Terms and
        Conditions. In accordance with Federal Acquisition Regulation 12.212 for civilian agencies and Defense Federal
        Acquisition Regulation Supplement 227.7202 for military agencies, use of the Application is further restricted
        by these Terms and Conditions.

        \n\n5. EXPORT RESTRICTIONS
        \nThe Application may be subject to export controls or restrictions by the United States or other countries or
        territories. You agree to comply with all applicable U.S. and international export laws and regulations. These
        laws include restrictions on destinations, end users, and end use.

        \n\n6. TERMINATION
        \nThese Terms and Conditions will continue to apply until terminated by either you or The Company as set forth
        below. You may terminate these Terms and Conditions at any time by permanently deleting the Application from
        your mobile device in its entirety. Your rights automatically and immediately terminate without notice from The
        Company or any Third Party if you fail to comply with any provision of these Terms and Conditions. In such
        event, you must immediately delete the Application.

        \n\n7. INDEMNITY
        \nTo the maximum extent permitted by law, you agree to defend, indemnify and hold harmless The Company, its
        affiliates and their respective directors, officers, employees and agents from and against any and all claims,
        actions, suits or proceedings, as well as any and all losses, liabilities, damages, costs and expenses
        (including reasonable attorneys fees) arising out of or accruing from your use of the Application, including
        your downloading, installation, or use of the Application, or your violation of these Terms and Conditions.

        \n\n8. DISCLAIMER OF WARRANTIES
        \na. YOU EXPRESSLY UNDERSTAND AND AGREE THAT YOUR USE OF THE APPLICATION IS AT YOUR SOLE DISCRETION AND RISK AND
        THAT THE APPLICATION IS PROVIDED AS IS AND AS AVAILABLE WITHOUT WARRANTY OF ANY KIND.
        \nb. YOU ARE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR MOBILE DEVICE, OR OTHER DEVICE, OR LOSS OF DATA THAT
        RESULTS FROM SUCH USE.
        \nc. THE COMPANY FURTHER EXPRESSLY DISCLAIMS ALL WARRANTIES AND CONDITIONS OF ANY KIND, WHETHER EXPRESS OR
        IMPLIED, INCLUDING, BUT NOT LIMITED TO THE IMPLIED WARRANTIES AND CONDITIONS OF MERCHANTABILITY, FITNESS FOR A
        PARTICULAR PURPOSE AND NON-INFRINGEMENT, WITH RESPECT TO THE APPLICATION.
        \nd. THE APPLICATION IS NOT INTENDED FOR USE IN THE OPERATION OF NUCLEAR FACILITIES, LIFE SUPPORT SYSTEMS,
        EMERGENCY COMMUNICATIONS, AIRCRAFT NAVIGATION OR COMMUNICATION SYSTEMS, AIR TRAFFIC CONTROL SYSTEMS, OR ANY
        OTHER ACTIVITIES IN WHICH THE FAILURE OF THE APPLICATION COULD LEAD TO DEATH, PERSONAL INJURY, OR SEVERE
        PHYSICAL OR ENVIRONMENTAL DAMAGE.

        \n\n9. LIMITATION OF LIABILITY
        \nYOU EXPRESSLY UNDERSTAND AND AGREE THAT THE COMPANY, ITS SUBSIDIARIES AND AFFILIATES, AND ITS LICENSORS ARE
        NOT LIABLE TO YOU UNDER ANY THEORY OF LIABILITY FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL CONSEQUENTIAL OR
        EXEMPLARY DAMAGES THAT MAY BE INCURRED BY YOU THROUGH YOUR USE OF THE APPLICATION, INCLUDING ANY LOSS OF DATA OR
        DAMAGE TO YOUR MOBILE DEVICE, WHETHER OR NOT THE COMPANY OR ITS REPRESENTATIVES HAVE BEEN ADVISED OF OR SHOULD
        HAVE BEEN AWARE OF THE POSSIBILITY OF ANY SUCH LOSSES ARISING.

        \n\n10. MISCELLANEOUS
        \na. These Terms and Conditions constitute the entire Agreement between you and The Company relating to the
        Application and govern your use of the Application, and completely replace any prior or contemporaneous
        agreements between you and The Company regarding the Application.
        \nb. The failure of The Company to exercise or enforce any right or provision of these Terms and Conditions does
        not constitute a waiver of such right or provision, which will still be available to The Company.
        \nc. If any court of law, having the jurisdiction to decide on this matter, rules that any provision of these
        Terms and Conditions is invalid, then that provision will be removed from the Terms and Conditions without
        affecting the rest of the Terms and Conditions. The remaining provisions of these Terms and Conditions will
        continue to be valid and enforceable.
        \nd. The rights granted in these Terms and Conditions may not be assigned or transferred by either you or The
        Company without the prior written approval of the other party. Neither you nor The Company are permitted to
        delegate their responsibilities or obligations under these Terms and Conditions without the prior written
        approval of the other party.
        \ne. These Terms and Conditions and your relationship with The Company under these Terms and Conditions will be
        governed by the laws of the State of California without regard to its conflict of laws provisions. You and The
        Company agree to submit to the exclusive jurisdiction of the courts located within the county of Santa Clara,
        California to resolve any legal matter arising from these Terms and Conditions. Notwithstanding this, you agree
        that The Company will still be allowed to apply for injunctive remedies (or an equivalent type of urgent legal
        relief) in any jurisdiction.
    </string>
</resources>
