<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="repositoryflow"
                    android:title="@string/repositoryflow_title"/>
    <EditTextPreference android:key="imageflowurl"
                        android:title="@string/imageflowurl_title"/>
    <CheckBoxPreference android:key="showtitle"
                        android:title="@string/showtitle_title" android:summaryOn="@string/showtitle_summary_on"
                        android:summaryOff="@string/showtitle_summary_off"
                        android:defaultValue="true"/>
    <CheckBoxPreference android:key="alwaysrefresh"
                        android:title="@string/alwaysrefresh_title" android:summaryOn="@string/alwaysrefresh_summary_on"
                        android:summaryOff="@string/alwaysrefresh_summary_off"
                        android:defaultValue="false"/>
    <ListPreference android:key="imagedelay"
                    android:title="@string/imagedelay_title"
                    android:defaultValue="60"
                    android:entries="@array/imagedelay"
                    android:entryValues="@array/imagedelayvalues"/>
    <ListPreference android:key="rssdelay"
                    android:title="@string/rssdelay_title"
                    android:defaultValue="900"
                    android:entries="@array/rssdelay"
                    android:entryValues="@array/rssdelayvalues"/>
</PreferenceScreen>